[package]
name = "lolcat"
version = "0.1.0"
edition = "2021"
authors = ["Emiliano Córdoba <31087818+emicba@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
rand = "0.8.5"
regex = "1.7.1"
